Gmaps funcionando, falta validar los datos

--- a/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_ImplementacionHistoriaDeUsuario/DeliverEat/DeliverEat.vbproj
+++ b/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_ImplementacionHistoriaDeUsuario/DeliverEat/DeliverEat.vbproj
@@ -99,7 +99,7 @@
     <Content Include="img\vegetal.jpg" />
     <Content Include="js\bootstrap-datetimepicker.min.js" />
     <Content Include="js\scripts.js" />
-    <Content Include="styles.css" />
+    <Content Include="css\styles.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
